--- a/app-build.yml
+++ b/app-build.yml
@@ -8,7 +8,7 @@
  
   tasks:
   - name: app build | Docker Login
-    shell: docker login -u bestind -p bestin123
+    shell: cat ~/pwd.txt | docker login -u bestind --password-stdin
     delegate_to: 127.0.0.1
     run_once: true
 
